--- a/auth/views/signup.html
+++ b/auth/views/signup.html
@@ -29,14 +29,14 @@
                     </div> 
         			<form class="form-horizontal" method="POST" action="/signup">
 						<div class="form-group">
-                                <label for="username" class="cols-sm-2 control-label">Username</label>
-                                <div class="cols-sm-10">
-                                    <div class="input-group">
-                                        <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-                                        <input type="text" class="form-control" name="username" id="username" placeholder="Enter your Username"/>
-                                    </div>
+                            <label for="username" class="cols-sm-2 control-label">Username</label>
+                            <div class="cols-sm-10">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                                    <input type="text" class="form-control" name="username" id="username" placeholder="Enter your Username"/>
                                 </div>
                             </div>
+                        </div>
     
                         <div class="form-group">
                             <label for="password" class="cols-sm-2 control-label">Password</label>
@@ -57,62 +57,27 @@
 								</div>
 							</div>
 						</div>
+                        
+                        <div class="form-group">
+                            <label for="age" class="cols-sm-2 control-label">Age</label>
+                            <div class="cols-sm-10">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-calendar fa" aria-hidden="true"></i></span>
+                                    <input type="text" class="form-control" name="age" id="age" onblur="checkDate()" placeholder="Age"/>
+                                </div>
+                            </div>
+                        </div>
 
 						<div class="form-group">
 							<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Register</button>
 						</div>
-						<!-- <div class="login-register">
-							<a href="index.php">Login</a>
-						</div> -->
                     </form>
-                    <div>
-                        <hr>
-                        <span id="signupMsg">
-                            <%= msg %>
-                        </span>
-                    </div>
 				</div>
 			</div>
 		</div>
 
-
-                <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<!--		<script type="text/javascript" src="assets/js/bootstrap.js"></script>-->
-          
-
-          <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 	</body>
 </html>
-
-<!-- <!doctype html>
-<html>
-
-<head>
-    <title>User Login and Sessions</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/styles.css" />
-</head>
-
-<body>
-    <div class="form-container">
-        <p class="form-header">Sign Up</p>
-        <form method="POST" action="/signup">
-            <label>Username:</label>
-            <input type="text" id="username" name="username"><br>
-            <label>Password:</label>
-            <input type="password" id="password" name="password"><br>
-            <label>Email:</label>
-            <input type="email" id="email" name="email"><br>
-            <input type="submit" id="register" value="Register">
-        </form>
-    </div>
-    <hr>
-    <span id="signupMsg">
-    <%= msg %>
-    </span>
-</body>
-
-</html> -->
