--- a/auth/views/user.html
+++ b/auth/views/user.html
@@ -1,79 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="myApp">
-
-<head>
+  <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
-    <!-- Website CSS style -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/main.css"> -->
     <link rel="stylesheet" type="text/css" href="../static/css/styles.css" />
-    <!-- Website Font style -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    
-    <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-
-    <title>User Login and Sessions</title>
-</head>
-
-<body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>  
+    <title>User</title>
+  </head>
+  <body>
     <div class="container" ng-controller="myController">
-        <div class="row main">
-            <div class="main-login main-center">
-                <div class="panel-heading">
-                    <div class="panel-title text-center">
-                        <h1 class="title">User Profile</h1>
-                        <hr />
-                    </div>
-                </div>
-                <form class="form-horizontal" method="POST" action="/user/update">
-                    <div class="form-group">
-                        <label for="username" class="cols-sm-2 control-label">Username</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-                                <input type="text" class="form-control" name="username" id="username" ng-model="user.username" disabled><br>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="email" class="cols-sm-2 control-label">Email</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                                <input type="text" class="form-control" name="email" id="email" ng-model="user.email"/>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="email" class="cols-sm-2 control-label">Favorite Color</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-circle fa" aria-hidden="true"></i></span>
-                                <input type="text" class="form-control" name="color" id="color" ng-model="user.color" placeholder="Favorite Color"/>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group ">
-                        <button type="submit" id="save" value="Save" class="btn btn-primary btn-lg btn-block login-button">Save</button>
-                    </div>
-                </form>
-                <form method="POST" action="/user/delete">
-                    <button type="submit" id="delete" class="btn btn-primary btn-lg btn-block login-button">Delete User</button>
-                </form>
-                <hr>
-                <span id="userMsg"><%= msg %></span>
-                <a id="homeLink" href="/">Home</a>
+      <div class="row main">
+        <div class="main-login main-center">
+          <div class="panel-heading">
+            <div class="panel-title text-center">
+              <h1 class="title">User Profile</h1>
+              <hr />
             </div>
+          </div>
+          <form class="form-horizontal" method="POST" action="/user/update">
+            <div class="form-group">
+              <label for="username" class="cols-sm-2 control-label">Username</label>
+              <div class="cols-sm-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                  <input type="text" class="form-control" name="username" id="username" ng-model="user.username" disabled><br>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="email" class="cols-sm-2 control-label">Email</label>
+              <div class="cols-sm-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                  <input type="text" class="form-control" name="email" id="email" ng-model="user.email"/>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="email" class="cols-sm-2 control-label">Favorite Color</label>
+              <div class="cols-sm-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-circle fa" aria-hidden="true"></i></span>
+                  <input type="text" class="form-control" name="color" id="color" ng-model="user.color" placeholder="Favorite Color"/>
+                </div>
+              </div>
+            </div>
+            <div class="form-group ">
+              <button type="submit" id="save" value="Save" class="btn btn-primary btn-lg btn-block login-button">Save</button>
+            </div>
+          </form>
+          <form method="POST" action="/user/delete">
+            <button type="submit" id="delete" class="btn btn-primary btn-lg btn-block login-button">Delete User</button>
+          </form>
+          <hr>
+          <%if (msg) { %>
+            <div class="alert alert-secondary alert-dismissible fade show mx-2 mt-3" id="userMsg">
+              <%= msg %>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          <% } %>
+          <a id="homeLink" href="/">Home</a>
         </div>
+      </div>
     </div>
     <script src="http://code.angularjs.org/1.2.9/angular.min.js"></script>
     <script src="/static/js/my_app.js"></script>
-</body>
+  </body>
 </html>
