--- a/auth/views/index.html
+++ b/auth/views/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>        
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <title>Home</title>
   </head>
   <body>
@@ -20,7 +21,17 @@
             <h2 id="welcomeText">Welcome. You are logged in as <%= username %>.</h2>
             <a id="logoutLink" href="/logout">Logout</a>
             <a id="editLink" href="/user">Edit User</a>
-            <p>Place Your Code Here<p>
+            <p id="number"></p>
+            <button id="ageButton" class="btn btn-primary btn-lg btn-block login-button" onclick="getAgeFact()">Get new fact!</button>
+            <script>
+              function getAgeFact() {
+                var age = '<%= age %>';
+                console.log(age);
+                $.get('http://numbersapi.com/' + age, function(data) {
+                  $('#number').text(data);
+                });
+              };
+            </script>
             <hr>
             <%if (msg) { %>
               <div class="alert alert-secondary alert-dismissible fade show mx-2 mt-3" id="indexMsg">
