--- a/auth/views/user.html
+++ b/auth/views/user.html
@@ -22,7 +22,7 @@
               <hr />
             </div>
           </div>
-          <form class="form-horizontal" method="POST" action="/user/update">
+          <form class="form-horizontal" method="POST" action="/user/update" enctype="multipart/form-data">
             <div class="form-group">
               <label for="username" class="cols-sm-2 control-label">Username</label>
               <div class="cols-sm-10">
@@ -41,13 +41,28 @@
                 </div>
               </div>
             </div>
-            <div class="form-group">
-              <label for="email" class="cols-sm-2 control-label">Favorite Color</label>
-              <div class="cols-sm-10">
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-circle fa" aria-hidden="true"></i></span>
-                  <input type="text" class="form-control" name="color" id="color" ng-model="user.color" placeholder="Favorite Color"/>
-                </div>
+            <div class=" form-group">
+              <div>
+                <table id="images" class="table table-striped table-bordered table-hover upload-table">
+                  <thead>
+                    <tr>
+                      <td class="text-center" id="upload-header">Profile Picture</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td class="text-center" id="upload-body">
+                        <div class="image-upload">
+                          <label for="file" class="file-label">
+                            <img src="http://placehold.it/200x200?text=Upload+Image" class="img-thumbnail" rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="right" data-html="true" data-title="">
+                          </label>
+                          <input type="file" name="file_upload" id="file" value="" onchange="fileSelected(this)">
+                          <p class="text-mute" id="file-name">Click to Choose File</p>
+                        </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
             <div class="form-group ">
@@ -57,7 +72,9 @@
           <form method="POST" action="/user/delete">
             <button type="submit" id="delete" class="btn btn-primary btn-lg btn-block login-button">Delete User</button>
           </form>
-          <hr>
+          <div class=" m-10">
+            <a class="btn btn-primary btn-lg btn-block login-button mt-3" id="homeLink" href="/">Home</a>
+          </div>
           <%if (msg) { %>
             <div class="alert alert-secondary alert-dismissible fade show mx-2 mt-3" id="userMsg">
               <%= msg %>
@@ -66,11 +83,26 @@
               </button>
             </div>
           <% } %>
-          <a id="homeLink" href="/">Home</a>
         </div>
       </div>
     </div>
     <script src="http://code.angularjs.org/1.2.9/angular.min.js"></script>
     <script src="/static/js/my_app.js"></script>
+    <script>
+      function fileSelected(element)
+      {
+        var file_name = $(element).val();
+        if (file_name == "")
+        {
+          $("#file-name").html("Click to Choose File");
+        }
+
+        else
+        {
+          file_name = file_name.substring(file_name.lastIndexOf("\\") + 1, file_name.length);
+          $("#file-name").html(file_name);
+        }
+      };
+    </script>
   </body>
 </html>
