--- a/auth/views/index.html
+++ b/auth/views/index.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="../static/js/index.js"></script>
     <title>Home</title>
   </head>
   <body>
@@ -22,16 +23,7 @@
             <a id="logoutLink" href="/logout">Logout</a>
             <a id="editLink" href="/user">Edit User</a>
             <p id="number"></p>
-            <button id="ageButton" class="btn btn-primary btn-lg btn-block login-button" onclick="getAgeFact()">Get new fact!</button>
-            <script>
-              function getAgeFact() {
-                var age = '<%= age %>';
-                console.log(age);
-                $.get('http://numbersapi.com/' + age, function(data) {
-                  $('#number').text(data);
-                });
-              };
-            </script>
+            <button id="ageButton" class="btn btn-primary btn-lg btn-block login-button" onclick="getAgeFact(<%= age %>)">Get new fact!</button>
             <hr>
             <%if (msg) { %>
               <div class="alert alert-secondary alert-dismissible fade show mx-2 mt-3" id="indexMsg">
