--- a/auth/views/signup.html
+++ b/auth/views/signup.html
@@ -55,7 +55,7 @@
               <div class="cols-sm-10">
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-calendar fa" aria-hidden="true"></i></span>
-                  <input type="text" class="form-control" name="age" id="age" onblur="checkDate()" placeholder="Age"/>
+                  <input type="text" class="form-control" name="age" id="age" placeholder="Age"/>
                 </div>
               </div>
             </div>
