--- a/auth/views/user.html
+++ b/auth/views/user.html
@@ -41,6 +41,15 @@
                 </div>
               </div>
             </div>
+            <div class="form-group">
+              <label for="age" class="cols-sm-2 control-label">Age</label>
+              <div class="cols-sm-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-calendar fa" aria-hidden="true"></i></span>
+                  <input type="number" class="form-control" name="age" id="age" ng-model="user.age"/>
+                </div>
+              </div>
+            </div>
             <div class=" form-group">
               <div>
                 <table id="images" class="table table-striped table-bordered table-hover upload-table">
